Taller sesión 2 Angular

--- a/ambiente/semillero-hbt/semillero-padre/semillero-web/src/main/angular/src/app/semillero/componentes/menu/menu-component.html
+++ b/ambiente/semillero-hbt/semillero-padre/semillero-web/src/main/angular/src/app/semillero/componentes/menu/menu-component.html
@@ -45,6 +45,8 @@
                         <li><a (click)="navegarHome()">Home</a></li>
                         <li><a (click)="navegarGestionarComic()">Gestionar Comic</a></li>
                         <li><a (click)="navegarGestionarCompra()">Gestionar compra comic</a></li>
+                        <li><a (click)="navegarMostarLista()">Puntos 1-5 Taller Sesión #2</a></li>
+                        <li><a (click)="navegarPunto6()">Punto 6 Taller Sesión #2</a></li>
                     </ul>
                 </nav>
                 <br>
