Taller Sesión 2 Angular v1.1

--- a/ambiente/semillero-hbt/semillero-padre/semillero-web/src/main/angular/src/app/semillero/componentes/punto6/punto6-component.html
+++ b/ambiente/semillero-hbt/semillero-padre/semillero-web/src/main/angular/src/app/semillero/componentes/punto6/punto6-component.html
@@ -6,3 +6,9 @@
 <pre>{{lista | json}}</pre>
 <br>
 <img [src]="urlImg">
+<br>
+<hr>
+<br>
+<button class="btn btn-primary" (click)="cambiarImg()">
+    Cambiar imagen
+</button>
