--- a/ambiente/semillero-hbt/semillero-padre/semillero-web/src/main/angular/src/app/semillero/componentes/gestionarComic/gestionar-comic.html
+++ b/ambiente/semillero-hbt/semillero-padre/semillero-web/src/main/angular/src/app/semillero/componentes/gestionarComic/gestionar-comic.html
@@ -84,13 +84,13 @@
         </div>
 
         <br>
-        <div class="row" *ngIf="true">
+        <div class="row" [hidden]="listaComics.length === 0">
             <div class="col-12">
                 <table class="table">
                     <thead>
                         <tr>
                             <th scope="col">#</th>
-                            <th scope="col">Nombre</th>
+                            <th scope="col">Nombres</th>
                             <th scope="col">Tematica</th>
                             <th scope="col">Precio</th>
                             <th scope="col">A color</th>
