--- a/ambiente/semillero-hbt/semillero-padre/semillero-web/src/main/angular/src/app/semillero/componentes/consultarComic/consultar-comic-component.html
+++ b/ambiente/semillero-hbt/semillero-padre/semillero-web/src/main/angular/src/app/semillero/componentes/consultarComic/consultar-comic-component.html
@@ -1,6 +1,6 @@
 <div class="container">
-    <form [formGroup]="gestionarComicForm">
-        <h1>Gestionar Comic</h1>
+    <form [formGroup]="consultarComicForm">
+        <h1>Consultar Comic</h1>
         <hr>
 
         <div class="row">
@@ -63,19 +63,14 @@
                 <br>
                 <div class="custom-control custom-radio custom-control-inline">
                     <input type="radio" id="customRadioInline1" class="custom-control-input"
-                        formControlName="color" [value]="true">
+                        formControlName="color" value="true">
                     <label class="custom-control-label" for="customRadioInline1">Si</label>
                 </div>
                 <div class="custom-control custom-radio custom-control-inline">
                     <input type="radio" id="customRadioInline2"  class="custom-control-input"
-                        formControlName="color" [value]="false">
+                        formControlName="color" value="false">
                     <label class="custom-control-label" for="customRadioInline2">No</label>
                 </div>
-
-                <input type="hidden" id="id" formControlName="id">
-                <input type="hidden" id="editar" formControlName="editar" value="false">
-                <input type="hidden" id="index" formControlName="index">
-
             </div>
         </div>
         <br>
@@ -84,42 +79,7 @@
                 <span></span>
             </div>
             <div class="col-6 text-right">
-                <button type="button" class="btn btn-primary" (click)="crearActualizarComic()">Crear/Editar</button>
-            </div>
-        </div>
-
-        <br>
-        
-        <div class="row" [hidden]="listaComics.length === 0">
-            <div class="col-12">
-                <table class="table">
-                    <thead>
-                        <tr>
-                            <th scope="col">#</th>
-                            <th scope="col">Nombre</th>
-                            <th scope="col">Tematica</th>
-                            <th scope="col">Precio</th>
-                            <th scope="col">A color</th>
-                            <th scope="col">Acciones</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <!--date:"MM/dd/yy"
-                        | uppercase-->
-                        <tr *ngFor="let comic of listaComics;let i=index;">
-                            <th scope="row">{{comic.id}}</th>
-                            <td>{{comic.nombre | uppercase }}</td>
-                            <td>{{comic.tematica | lowercase }}</td>
-                            <td>{{comic.precio | number: '.2'}}</td>
-                            <td>{{comic.color ? 'Si' : 'No' }}</td>
-                            <td>
-                                <i class="fas fa-search 2x ml-1" [routerLink]="['/consultar-comic',comic]" title="Consultar"></i>
-                                <i class="fas fa-pencil-alt 2x ml-1"  (click)="consultarComic(i)" title="Editar"></i>
-                                <i class="far fa-times-circle 2x ml-1" (click)="eliminarComic(i)" title="Eliminar"></i>
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
+                <button type="button" class="btn btn-primary" (click)="navegarGestionar()">Volver</button>
             </div>
         </div>
     </form>
